# fluffy_system

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  TLS_CONFIGURATION_SUMMARY.md  pyproject.toml
.github/workflows/: bump.yaml  ci.yaml
ansible/: DEPLOYMENT_SUMMARY.md  README.md  ansible.cfg
ansible/docs/: APPLY_SECURITY_TO_SERVICE.md  SECURITY.md
ansible/docs/archive/: WAF_DEPLOYMENT_NOTES.md  WAF_IMPLEMENTATION.md  WAF_QUICK_REFERENCE.md  test_waf.sh
ansible/group_vars/: all.yml  edge.yml  managers.yml  workers.yml
ansible/inventories/: production.ini  production.ini.bak  staging.ini
ansible/inventory/: hosts.ini  inventory.tpl
ansible/inventory/group_vars/: all.yml  all.yml.tpl  edge.yml
ansible/playbooks/: backup.yml  deploy_database.yml  deploy_monitoring.yml  deploy_security.yml  deploy_stack.yml  deploy_traefik.yml  deploy_website.yml  manage_secrets.yml  restore.yml  setup_docker_tls.yml  swarm_init.yml  validate_tls_config.yml
ansible/roles/docker/defaults/: main.yml
ansible/roles/docker/handlers/: main.yml
ansible/roles/docker/tasks/: configure.yml  install.yml  main.yml  networks.yml  swarm.yml
ansible/roles/docker/templates/: docker-logrotate.j2  docker-override.conf.j2
ansible/roles/docker/vars/: main.yml
ansible/scripts/: deploy.sh  manage.sh  setup.sh
ansible/stacks/api/: docker-compose.yml
ansible/stacks/webapp/: docker-compose.yml
ansible/stacks/worker/: docker-compose.yml
fluffy_system/: __init__.py
scripts/: hetzner_security_audit.sh  node_init.sh  ssh_commands.md  ssh_helper.sh  verify_hardening.sh
terraform/: .terraform.lock.hcl  Makefile  main.tf  variables.tf  versions.tf
